Regression(r204605): support for "cp874" charset alias was inadvertently dropped which may cause issues on certain Thai sites https://bugs.webkit.org/show_bug.cgi?id=171128 <rdar://problem/31526844>

Reviewed by Alexey Proskuryakov.

When using Thai as default language on MacOS, defaultTextEncodingNameForSystemLanguage()
was returning "cp874" encoding with was dropped in r204605 for not being part of the
encoding specification (https://encoding.spec.whatwg.org/#names-and-labels).

To address the issue, we map "cp874" encoding to the "dos-874" encoding which is
properly recognized. Without this, this could lead to issue on WebSites that do not
specify a charset.

* platform/text/TextEncodingRegistry.cpp:
(WebCore::defaultTextEncodingNameForSystemLanguage):


Canonical link: https://commits.webkit.org/188115@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215711 268f45cc-cd09-0410-ab3c-d52691b4dbfc